--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/coffe_shop_website.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/coffe_shop_website.PNG" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Coffe shop</h4>
                   <p>Developed a fully responsive coffee shop website using HTML, CSS, and JavaScript. The site includes a homepage, testimonial, menus, image gallery. Designed for both desktop and mobile users to enhance the user experience.</p>
-                  <a href="assets/img/portfolio/coffe_shop_website.png" title="coffe shop website" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/coffe_shop_website.PNG" title="coffe shop website" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://haripriyadharshani.github.io/coffee-website/" target="block" title="coffe shop" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -395,11 +395,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/HomelyHue_furnisure_website.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/HomelyHue_furnisure_website.PNG" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Furnisur shop</h4>
                   <p></p>
-                  <a href="assets/img/portfolio/HomelyHue_furnisure_website.png" title="HomelyHue_furnisure shop" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/HomelyHue_furnisure_website.PNG" title="HomelyHue_furnisure shop" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://haripriyadharshani.github.io/Homelyhue_furniture_shop/" target="block" title="furniture shop" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
